--- a/table.html
+++ b/table.html
@@ -1,112 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Timetable - CSE Department</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f6f9;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background: white;
-        }
-        th, td {
-            border: 1px solid #333;
-            padding: 10px;
-            text-align: center;
-        }
-        caption {
-            caption-side: top;
-            font-weight: bold;
-            font-size: 1.3em;
-            margin-bottom: 10px;
-        }
-        th {
-            background-color: #cde3f7;
-        }
-        .nested-table th, .nested-table td {
-            border: 1px solid #666;
-            padding: 5px;
-        }
-        .nested-table {
-            width: 100%;
-            background-color: #fafafa;
-        }
-    </style>
-</head>
-<body>
-
-    <table>
-        <caption>College Timetable - CSE Department</caption>
-        <thead>
-            <tr>
-                <th>Day / Time</th>
-                <th>9:00 - 10:00</th>
-                <th>10:00 - 11:00</th>
-                <th>11:00 - 12:00</th>
-                <th>12:00 - 1:00</th>
-                <th>1:00 - 2:00</th>
-                <th>2:00 - 3:00</th>
-                <th>3:00 - 4:00</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th>Monday</th>
-                <td>Mathematics</td>
-                <td>English</td>
-                <td></td>
-                <td rowspan="5">Break</td>
-                <td>Computer Lab</td>
-                <td></td>
-                <td>Sports</td>
-            </tr>
-            <tr>
-                <th>Tuesday</th>
-                <td></td>
-                <td>C Programming</td>
-                <td></td>
-                <td>Electronics Lab</td>
-                <td></td>
-                <td>Library</td>
-            </tr>
-            <tr>
-                <th>Wednesday</th>
-                <td>Mathematics</td>
-                <td>English</td>
-                <td>Physics</td>
-                <td colspan="2" rowspan="2">
-                    <table class="nested-table">
-                        <caption>Lab Details</caption>
-                        <tr><th>Batch A</th><td>DBMS Lab</td></tr>
-                        <tr><th>Batch B</th><td>OS Lab</td></tr>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <th>Thursday</th>
-                <td>Workshop</td>
-                <td></td>
-                <td>Physics</td>
-                <td>Mathematics</td>
-                <td>English</td>
-                <td>Seminar</td>
-            </tr>
-            <tr>
-                <th>Friday</th>
-                <td>Computer Networks</td>
-                <td>English</td>
-                <td>Physics</td>
-                <td></td>
-                <td colspan="2">Project Work</td>
-            </tr>
-        </tbody>
-    </table>
-
-</body>
-</html>
+<table border="1">
+  <tr><th>Name</th><th>Age</th></tr>
+  <tr><td>Vivek</td><td>19</td></tr>
+</table>
